salesforce/force-app/main/default/objects/Account/fields/ARR_Synced_At__c.field-meta.xml
<CustomField>
    <fullName>ARR_Synced_At__c</fullName>
    <description>Set by the billing integration on every sync run, even when ARR did not change</description>
    <label>ARR Synced At</label>
    <type>DateTime</type>
</CustomField>